--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
-    "sequelize": "^6.6.5"
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0"
   }
 }
